<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">抄表调试工具</string>
    <string name="action_settings">Settings</string>
    <string name="buad_rate">波特率：</string>
    <string name="serialport">串口号：</string>
    <string name="power">电源：</string>
    <string name="open">打开</string>
    <string name="close">关闭</string>
    <string name="hex_recv">HEX接收</string>
    <string name="hex_send">HEX发送</string>
    <string name="send">发送</string>
    <string name="clear">清空</string>
    <string name="title_activity_second">SecondActivity</string>
    <string name="title_activity_third">ThirdActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_update">UpdateActivity</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_custom_view">CustomViewActivity</string>
    <string name="title_activity_aty_list">AtyListActivity</string>
    <string name="title_activity_view_pager_indicator">ViewPagerIndicatorActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_meter_test">MeterTestActivity</string>
    <string name="title_activity_rlmeter_test">RLMeterTestActivity</string>
    <string name="title_activity_rlmeter_settings">RLMeterSettingsActivity</string>
    <string name="title_activity_rlmeter_manager">RLMeterManagerActivity</string>
    <string name="title_activity_set_net_id">SetHandleRfNetIDActivity</string>
    <string name="title_activity_set_meter_rf_param">SetMeterRfParamActivity</string>
    <string name="title_activity_activity_lierda_rf">ActivityLierdaRf</string>
    <string name="title_activity_meter_id_manage">MeterIdManageActivity</string>
    <string name="title_activity_info_manage">InfoManageActivity</string>
    <string name="title_activity_meter_info">MeterInfoActivity</string>
    <string name="title_activity_rlbuildings_list">RLBuildingsListActivity</string>
    <string name="title_activity_rlread_meter_data">RLReadMeterDataActivity</string>
    <string name="title_activity_rlmeter_data">RLMeterDataActivity</string>
    <string name="title_activity_rlmeter_data_list">RLMeterDataListActivity</string>
    <string name="time">时间:</string>
    <string name="null_value">--</string>
    <string name="meter_data">读数:</string>
    <string name="state">状态</string>

</resources>
