<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/editTextInfo"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:lineSpacingExtra="4dp"
            android:layout_weight="4"
            android:gravity="top"
            android:background="@drawable/corners_background"
            android:textSize="12sp">
        </EditText>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/FontStyle"
                android:text="@string/serialport" />

            <Spinner
                android:id="@+id/spinnerSerialport"
                android:layout_width="100dp"
                android:layout_height="50dp"
                />

            <Button
                android:id="@+id/buttonOpen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/open" />

            <Button
                android:id="@+id/buttonClear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/clear" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/FontStyle"
                android:paddingRight="20dp"
                android:text="表ID："/>
            <EditText
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="40dp"
                android:background="@drawable/corners_background"
                android:text="10100001"
                android:id="@+id/meterIdEditText"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/FontStyle"
                android:paddingRight="20dp"
                android:text="表 读 数："/>
            <EditText
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="40dp"
                android:background="@drawable/corners_background"
                android:id="@+id/meterValueEditText"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/FontStyle"
                android:paddingRight="20dp"
                android:text="阀门状态："/>
            <EditText
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="40dp"
                android:background="@drawable/corners_background"
                android:id="@+id/meterValveStateEditText"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/readValueBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="抄表"/>
            <Button
                android:id="@+id/openValveBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="开阀"/>
            <Button
                android:id="@+id/closeValveBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="关阀"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>