<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="10"
                android:orientation="horizontal" >

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:orientation="vertical">
                    <EditText
                        android:id="@+id/editTextInfo"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="0dp"
                        android:layout_marginLeft="0dp"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:lineSpacingExtra="4dp"
                        android:layout_weight="9"
                        android:gravity="top"
                        android:background="@drawable/corners_background"
                        android:inputType="none"
                        android:textSize="20px"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <Spinner
                            android:id="@+id/cmdSpinner"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            ></Spinner>
                        <Button
                            android:id="@+id/refreshBtn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="刷新"/>
                    </LinearLayout>

                </LinearLayout>


                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:layout_margin="5dp"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/textView1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/FontStyle"
                        android:text="表号HEX" />
                    <EditText
                        android:id="@+id/meterIdEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:minLines="2"
                        android:background="@drawable/corners_background"
                        android:text="0005"
                        android:gravity="top"/>

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/FontStyle"
                        android:text="读数" />
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <EditText
                            android:layout_weight="1"
                            android:id="@+id/meterValueEditText"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:background="@drawable/corners_background"
                            android:minLines="2"
                            android:gravity="top"
                            android:text="109.6"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="m³"/>
                    </LinearLayout>

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/FontStyle"
                        android:text="原地址BCD" />
                    <EditText
                        android:id="@+id/meterOldAddressEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/corners_background"
                        android:minLines="2"
                        android:gravity="top"
                        android:text="23051507000005"/>
                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/FontStyle"
                        android:text="新地址BCD" />
                    <EditText
                        android:id="@+id/meterNewAddressEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/corners_background"
                        android:minLines="2"
                        android:gravity="top"
                        android:text="23051507000006"/>

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/FontStyle"
                        android:text="状态HEX" />

                    <EditText
                        android:id="@+id/meterStateEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/corners_background"
                        android:gravity="top"/>
                    <TextView
                        android:id="@+id/textViewjiesuanri"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/FontStyle"
                        android:text="结算日BCD" />

                    <EditText
                        android:id="@+id/jieauanriEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/corners_background"
                        android:gravity="top"
                        android:text="15"/>
                    <TextView
                        android:id="@+id/textViewchaobiaori"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/FontStyle"
                        android:text="抄表日BCD" />

                    <EditText
                        android:id="@+id/chaobiaoriEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/corners_background"
                        android:gravity="top"
                        android:text="15"/>

                    <CheckBox
                        android:id="@+id/checkBoxHexRecv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/hex_recv" />

                    <CheckBox
                        android:id="@+id/checkBoxHexSend"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/hex_send" />
                    <Button
                        android:id="@+id/buttonOpen"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/open" />

                    <Button
                        android:id="@+id/buttonClear"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/clear" />

                </LinearLayout>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal" >

                <AutoCompleteTextView
                    android:id="@+id/editTextSend"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="7"
                    android:background="@drawable/corners_background"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="5dp"
                    android:minLines="10"
                    android:gravity="top">
                </AutoCompleteTextView>

                <Button
                    android:id="@+id/buttonSend"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/send" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>